# margera-weather

./: .gitignore  README.md  create_db.py  experiments.ipynb  experiments_copy.ipynb  requirements.txt  schema.sql
weatherAPI/: pyproject.toml
weatherAPI/src/weatherapi/: Dockerfile
weatherAPI/src/weatherapi/app/: main.py
weatherAPI/src/weatherapi/app/utils/utils/: db_utils.py
